@@ -1,6 +1,6 @@
 Package: SASmarkdown
-Version: 0.7.3
-Date: 2022-08-17
+Version: 0.8.0
+Date: 2022-08-23
 Title: 'SAS' Markdown
 Description: Settings and functions to extend the 'knitr' 'SAS' engine.
 Imports: knitr(>= 1.21), xfun(>= 0.4)
