@@ -10,19 +10,23 @@ saspdf <- function (options) {
     logf <- sub("[.]sas$", ".log", f)
     texf <- sub("[.]sas$", ".tex", f)
     if (is.null(options$saveSAS) || options$saveSAS==FALSE) 
-        on.exit(unlink(c(pdff, logf, listf, f)), add = TRUE)
+        on.exit(unlink(c(texf, logf, listf, f)), add = TRUE)
     
-    if (options$label != "") glabel <- paste("/imagename='", options$label, "'")
+    if (options$label != "") 
+        glabel <- options$label else
+            glabel <- sasplot.pdf
     if (length(grep("fig.path", options$params.src, fixed=TRUE))!=0) 
-      gpath <- paste0(options$fig.path,"/") else gpath<-""
+      gpath <- paste0(options$fig.path,"/") else 
+          gpath <- ""
     
-    odsinit <- c("ods noproctitle;",
-                 "ods listing close;",
-                 "ods tagsets.tablesonlylatex file=", texf,  "(notop nobottom) style=journal;"
+    odsinit <- c("ods noproctitle;\n",
+                 "ods listing close;\n",
+                 paste0("ods tagsets.tablesonlylatex file='", texf,  "' (no_top_matter no_bottom_matter) style=journal;\n"),
+                 paste0("ods graphics / imagename='", glabel, "' outputfmt=pdf;")
                  )
-
-    writeLines(c("OPTIONS NONUMBER NODATE PAGESIZE = MAX FORMCHAR = '|----|+|---+=|-/<>*' FORMDLIM=' ';title;",
-                 odsinit,
+    
+    writeLines(c(odsinit,
+                 "OPTIONS NONUMBER NODATE PAGESIZE = MAX FORMCHAR = '|----|+|---+=|-/<>*' FORMDLIM=' ';title;",
                  options$code), f)
     f
   }
@@ -53,8 +57,8 @@ saspdf <- function (options) {
     out.listing <- c(readLines(listf), out)
   if (options$eval &&  file.exists(logf))
     out.log <- c(readLines(logf), out)
-  if (options$eval &&  file.exists(htmlf))
-      out.html <- c(readLines(htmlf), out)
+  if (options$eval &&  file.exists(texf))
+      out.tex <- c(readLines(texf), out)
   # if (is.null(options$encoding))
   #     enc <- "latin1" else enc <- options$encoding
   # if (options$eval && file.exists(listf))
@@ -66,7 +70,11 @@ saspdf <- function (options) {
  # out.log <- out.log[-(1:grep("FORMDLIM", out.log))]
  # out.log <- out.log[1:(grep("SAS Institute Inc.", out.log)-2)]
  # out.log <- out.log[-(1:grep("^NOTE: ([[:alpha:]]*) HTML5? Body", out.log))]
- sasinit <- grep("NOTE: SAS initialization", out.log)
+  formdelim <- grep("FORMDLIM", out.log)
+  if (length(formdelim > 0)) {
+      out.log <- out.log[-(1:formdelim)]           # trim log header
+  }
+  sasinit <- grep("NOTE: SAS initialization", out.log)
  if (length(sasinit > 0)) {
      out.log <- out.log[-(1:sasinit+2)]           # trim log header
  }
@@ -74,22 +82,21 @@ saspdf <- function (options) {
  if (length(autoexec > 0)) {
      out.log <- out.log[-(1:autoexec+1)]           # trim log header
  }
- formdelim <- grep("FORMDLIM", out.log)
- if (length(formdelim > 0)) {
-     out.log <- out.log[-(1:formdelim)]           # trim log header
- }
  sasinstitute <- grep("NOTE: SAS Institute Inc.", out.log)
  if (length(sasinstitute > 0)) {
      out.log <- try(out.log[1:(sasinstitute-2)], silent=TRUE) # trim log tail
  }
- htmlbody <- grep("^NOTE: .* HTML5? Body", out.log)
- if (length(htmlbody > 0)) {
-     out.log <- try(out.log[-(1:htmlbody)], silent=TRUE) # trim HTML output note
- }
+ # htmlbody <- grep("^NOTE: .* HTML5? Body", out.log)
+ # if (length(htmlbody > 0)) {
+ #     out.log <- try(out.log[-(1:htmlbody)], silent=TRUE) # trim HTML output note
+ # }
+ 
+ # if (is.null(options$saveSAS) || options$saveSAS==FALSE) 
+ #     on.exit(unlink(paste0(glabel, ".pdf")), add = TRUE)
  
   if (options$engine == "saspdf" && is.null(attr(out, "status"))) {
-      return(sas_output(options, options$code, out.html))
+      return(sas_output(options, options$code, out.tex))
   } else {
-      return(sas_output(options, out.log, out.html))
+      return(sas_output(options, out.log, out.tex))
   }
 }
